Updated tool to have the ability to store sessions and frames, avoiding the need to re-extract data